# ferrite

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: ai.rs  auth.rs  config.rs  cookies.rs  db.rs  email.rs  error.rs  main.rs  metrics.rs  relay.rs  state.rs
crates/api/src/routes/: admin.rs  analytics.rs  assets.rs  brand.rs  health.rs  jobs.rs  live.rs  media.rs  members.rs  mod.rs  playback.rs  profile.rs  provenance.rs  search.rs  session.rs  tenants.rs  usage.rs  waitlist.rs  webhooks.rs
crates/core/: Cargo.toml
crates/core/src/: encoder.rs  job.rs  ladder.rs  lib.rs  media.rs  provenance.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: ai.rs  captions.rs  clip.rs  cmaf.rs  config.rs  cpu_encoder.rs  dash.rs  db.rs  encoding.rs  extras.rs  main.rs  pipeline.rs  provenance.rs  shorts.rs  thumbnails.rs  webhooks.rs
deploy/: api.Dockerfile  docker-compose.prod.yml  srs.conf  worker.Dockerfile
migrations/: 0001_init.sql  0002_encryption.sql  0003_live.sql  0004_usage_minutes.sql  0005_user_name.sql  0006_password_resets.sql  0007_clips.sql  0008_job_outputs.sql  0009_captions.sql  0010_playback_events.sql  0011_simulcast.sql  0012_transcript_search.sql  0013_provenance.sql  0014_caption_tracks.sql  0015_moderation.sql  0016_waitlist.sql  0017_rls.sql
scripts/: fresh.sh
web/: Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web/src/: app.css  app.html  hooks.client.ts  hooks.server.ts
web/src/lib/: currency.ts  format.ts  humanize.ts  motion.ts  schemas.ts  site.ts  theme.svelte.ts
web/src/lib/actions/: reveal.ts
web/src/lib/api/: client.ts  endpoints.ts  session.svelte.ts  types.ts
web/src/lib/charts/: AreaChart.svelte  Donut.svelte  Gauge.svelte  Meter.svelte  Sparkline.svelte  index.ts  util.ts
web/src/lib/components/: AssetThumb.svelte  Auth.svelte  Connect.svelte  UserMenu.svelte  VideoPlayer.svelte
web/src/lib/ui/: Button.svelte  Card.svelte  Icon.svelte  Logo.svelte  ProgressBar.svelte  Sheet.svelte  StatusPill.svelte  Toaster.svelte  index.ts  toast.svelte.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/src/routes/(marketing)/: +layout.svelte  +page.svelte
web/src/routes/(marketing)/pricing/: +page.svelte
web/src/routes/(marketing)/waitlist/: +page.svelte
web/src/routes/admin/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/app/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
web/src/routes/app/activity/: +page.svelte
web/src/routes/app/analytics/: +page.svelte
web/src/routes/app/assets/: +page.svelte
web/src/routes/app/assets/[id]/: +page.svelte
web/src/routes/app/jobs/: +page.svelte
web/src/routes/app/jobs/[id]/: +page.svelte
web/src/routes/app/keys/: +page.svelte
web/src/routes/app/live/: +page.svelte
web/src/routes/app/live/[id]/: +page.svelte
web/src/routes/app/metrics/: +page.svelte
web/src/routes/app/search/: +page.svelte
web/src/routes/app/settings/: +page.svelte
web/src/routes/app/team/: +page.svelte
web/src/routes/app/usage/: +page.svelte
web/src/routes/assets/: +page.svelte
web/src/routes/embed/[job]/: +page.svelte
web/src/routes/jobs/: +page.svelte
web/src/routes/jobs/[id]/: +page.svelte
web/src/routes/live/: +page.svelte
web/src/routes/live/[id]/: +page.svelte
web/src/routes/reset-password/: +page.svelte
