[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/queue",
    "crates/api",
    "crates/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ferrite"]

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "cors", "limit"] }

# serialization / validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }

# db
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }

# storage / queue
aws-sdk-s3 = "1"
aws-config = "1"
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# errors / util
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dotenvy = "0.15"

# internal crates
ferrite-core = { path = "crates/core" }
ferrite-storage = { path = "crates/storage" }
ferrite-queue = { path = "crates/queue" }

[profile.release]
opt-level = 3
lto = "thin"
