[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/queue",
    "crates/api",
    "crates/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ferrite"]

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# web
axum = "0.8"
async-stream = "0.3"
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "cors", "limit"] }

# serialization / validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }

# db
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }

# storage / queue
aws-sdk-s3 = "1"
aws-config = "1"
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
# plain HTTP client for the ingest server's status API (localhost, no TLS)
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# observability
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }

# errors / util
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dotenvy = "0.15"

# auth / crypto
sha2 = "0.11"
hmac = "0.13"
ed25519-dalek = "2"
rand = "0.9"
hex = "0.4"
argon2 = "0.5"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }

# email (SMTP) — creds optional; unconfigured = dev log mode
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "hostname"] }

# internal crates
ferrite-stream-core = { path = "crates/core" }
ferrite-stream-storage = { path = "crates/storage" }
ferrite-stream-queue = { path = "crates/queue" }

[profile.release]
opt-level = 3
lto = "thin"
