[package]
name = "ferrite-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ferrite-api"
path = "src/main.rs"

[dependencies]
ferrite-core.workspace = true
ferrite-storage.workspace = true
ferrite-queue.workspace = true

tokio.workspace = true
axum.workspace = true
async-stream.workspace = true
futures.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
validator.workspace = true

sqlx.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
config.workspace = true
dotenvy.workspace = true

sha2.workspace = true
hmac.workspace = true
rand.workspace = true
hex.workspace = true
reqwest.workspace = true
