[package]
name = "ferrite-stream-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ferrite-stream-api"
path = "src/main.rs"

[dependencies]
ferrite-stream-core.workspace = true
ferrite-stream-storage.workspace = true
ferrite-stream-queue.workspace = true

tokio.workspace = true
axum.workspace = true
async-stream.workspace = true
futures.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
validator.workspace = true

sqlx.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
config.workspace = true
dotenvy.workspace = true

sha2.workspace = true
hmac.workspace = true
rand.workspace = true
hex.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
lettre.workspace = true
reqwest.workspace = true
