[package]
name = "ferrite-stream-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
