[package]
name = "ferrite-stream-queue"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferrite-stream-core.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
