[package]
name = "ferrite-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ferrite-worker"
path = "src/main.rs"

[dependencies]
ferrite-core.workspace = true
ferrite-storage.workspace = true
ferrite-queue.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
rand.workspace = true
hex.workspace = true
sha2.workspace = true
hmac.workspace = true
reqwest.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
config.workspace = true
dotenvy.workspace = true
